[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.2.2"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://source.that.world/source/libsecp256k1-rs/"
keywords = [ "crypto", "ECDSA", "secp256k1", "bitcoin", "no_std" ]

[lib]
name = "libsecp256k1"

[dependencies]
rand = { version = "0.6", default-features = false }
hmac-drbg = "0.1"
sha2 = "0.6"
digest = "0.6"
typenum = "1.9"
arrayref = "0.3"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "99f410ec22c97634e0c430fc578b3a20f30b5ee5", features = ["rand"] }
rand = "0.6"
clear_on_drop = "0.2.3"

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
